lintian (2.5.37) UNRELEASED; urgency=medium

   "XXX: generate tag summary"

  * checks/application-not-library.{desc,pm}:
    + [AB] Downgrade libapp-perl-package-name to certainty possible.
  * checks/binaries.pm:
    + [NT] Apply patch from Michael Stapelberg to ignore
      "no-relro" and "no-fortify-functions" issues in
      binaries built by the go compiler, as it does not
      support these features.  (Closes: #795667)
    + [NT] Apply patch from Michael Stapelberg to a
      common false positive spelling mistake in "go"
      binaries.  (Closes: #795614)
  * checks/control-file.pm:
    + [AB] Apply patch by Christoph Biedl for relaxing dependency checks
      to allow versions with tilde. (Closes: #797951)
  * checks/copyright.pm:
    + [BR] Fix FP for copyright-without-copyright-notice tag
      allow public-domain.  (Closes: #786867)
  * checks/cruft.pm:
    + [BR] Fix complex regular subexpression recursion limit.
      Strip comments is only done on first 8192 characters.
      (Closes: #795955).
    + [BR] Performance improvement check if line < 1024 before
      stripping comment. Classify to minified if line > 1024.
    + [BR] Fix false positive in missing-sources directory
      search path.
  * checks/description.pm:
    + [AB] Fix false positives in
      perl-module-name-not-mentioned-in-description.  (Closes: #795779)
  * checks/fields.{desc,pm}:
    + [JW] Use "an" (instead of "a") before "HTTP".
    + [NT] Assert that -dbgsym packages are in the "debug" section.
      Thanks to Jean-Michel Vourgère for reporting the issue.
  * checks/obsolete-sites.{desc,pm}:
    + [AB] New check with tag obsolete-url-in-packaging to check for URLs
      of hosting sites with frozen contents or (soon to be) closed hosting
      sites (Google Code, Gitorious, Freshmeat, etc.) inside the
      packaging.  (Closes: #793503)
  * checks/scripts.pm:
    + [BR] Fix Unescaped left brace in regex.  (Closes: #788926)
  * checks/version-substvars.pm: